@@ -40,12 +40,13 @@
 # 170321-1145 - Added pause code time limits colors
 # 170409-1557 - Added IP List validation code
 # 180330-1344 - Added fix for WebRTC webphone microphone permissions
+# 181128-1040 - Added external_web_socket_url option
 #
 
 $startMS = microtime();
 
-$version = '2.14-28';
-$build = '180330-1344';
+$version = '2.14-29';
+$build = '181128-1040';
 
 header ("Content-type: text/html; charset=utf-8");
 
@@ -962,12 +963,15 @@ if (strlen($monitor_phone)>1)
 			$codecs_list = preg_replace("/-/",'',$codecs_list);
 			$codecs_list = preg_replace("/&/",'',$codecs_list);
 
-			$stmt="SELECT asterisk_version,web_socket_url from servers where server_ip='$webphone_server_ip' LIMIT 1;";
+			$stmt="SELECT asterisk_version,web_socket_url,external_web_socket_url from servers where server_ip='$webphone_server_ip' LIMIT 1;";
 			if ($DB) {echo "|$stmt|\n";}
 			$rslt=mysql_to_mysqli($stmt, $link);
 			$row=mysqli_fetch_row($rslt);
-			$asterisk_version =		$row[0];
-			$web_socket_url =		$row[1];
+			$asterisk_version =			$row[0];
+			$web_socket_url =			$row[1];
+			$external_web_socket_url =	$row[2];
+			if ( ($use_external_server_ip=='Y') and (strlen($external_web_socket_url) > 5) )
+				{$web_socket_url = $external_web_socket_url;}
 
 			if ($use_external_server_ip=='Y')
 				{
@@ -1035,7 +1039,7 @@ if (strlen($monitor_phone)>1)
 			$b64_system_key =		base64_encode($system_key);
 
 			$WebPhonEurl = "$webphone_url?phone_login=$b64_phone_login&phone_login=$b64_phone_login&phone_pass=$b64_phone_pass&server_ip=$b64_server_ip&callerid=$b64_callerid&protocol=$b64_protocol&codecs=$b64_codecs&options=$b64_options&system_key=$b64_system_key";
-			$webphone_content = "<iframe src=\"$WebPhonEurl\" style=\"width:" . $webphone_width . ";height:" . $webphone_height . ";background-color:transparent;z-index:17;\" scrolling=\"auto\" frameborder=\"0\" allowtransparency=\"true\" id=\"webphone\" name=\"webphone\" width=\"" . $webphone_width . "\" height=\"" . $webphone_height . "\" allow=\"microphone\"> </iframe>";
+			$webphone_content = "<iframe src=\"$WebPhonEurl\" style=\"width:" . $webphone_width . ";height:" . $webphone_height . ";background-color:transparent;z-index:17;\" scrolling=\"auto\" frameborder=\"0\" allowtransparency=\"true\" id=\"webphone\" name=\"webphone\" width=\"" . $webphone_width . "\" height=\"" . $webphone_height . "\" allow=\"microphone *; speakers *;\"> </iframe>";
 			}
 		}
 	}
